--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gic-test/vue-gic-space",
+  "name": "vue-gic-space",
   "description": "vue-gic-space Plugin",
   "author": "syo <syolmm@qq.com>",
   "version": "1.0.8",
